--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ h2{
     padding:10px 20px;
 }
 
+.lightgrey{
+    background-color:#EDEDED;
+    
+}
+
 
 
 /* header */
@@ -105,8 +110,7 @@ a{
 
 .row{
     width:100%;
-    padding:40px;
-    min-height:500px;
+    padding: 50px 10px;
 }
 
 .bg-img{
@@ -120,6 +124,17 @@ a{
     width:60%;
     margin:auto;
     text-align:center;
+}
+
+.wave-container{
+    background-image: url(../img/wave.svg);
+    width:100%;
+    min-height:200px;
+    opacity:0.07;
+}
+
+.wave-container.bottom{
+    transform: scaleY(-1)
 }
 
 
@@ -232,9 +247,9 @@ button:hover{
     border:1px dashed black;
 }
 
-.debug main >.lightgrey{
+/* .debug main >.lightgrey{
     background-color:lightgrey;
-}
+} */
 
 .debug main .row > .box-container >*{
     border:1px dashed black;
@@ -254,3 +269,4 @@ button:hover{
     border:1px dashed black;
 
 }
+
